tests/reject/vtMutateArgument.emojic
🕊 🌼 🍇
  🖍🆕 text 🔡

  🆕 🍼 text 🔡 🍇🍉

  ❗️ 🌵 🍇
    😀 text❗️
  🍉

  🖍 ❗️ 😣 🍇
    🔤Rabzmw🔤 ➡️ 🖍🆕text
  🍉

  🐇❗️ 🙃 x 🌼 🍇
    😣 x❗️
  🍉
🍉

🏁 🍇
  🆕🌼 🔤Discovery🔤❗️ ➡️ s
  🌵 s❗️
  🙃🕊🌼 s❗️
🍉
